# zazen-timer

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  manifest.json  package-lock.json  sw.js
assets/: android-chrome-192x192-00e229331706da6e.png.br  android-chrome-512x512-b465b1095964a27e.png.br  apple-touch-icon-5954c36cf87286a2.png.br  favicon-16x16-19a2cf29fcf333e1.png.br  favicon-32x32-7459cfa09b5fb6c9.png.br  sw.js  tailwind-783990df4970675f.css  tailwind-783990df4970675f.css.br  tailwind-bb7505027a39c560.css  tailwind-bb7505027a39c560.css.br  tailwind.css  zazen_timer-a5e3712dbf3adeb8.js  zazen_timer-a5e3712dbf3adeb8.js.br  zazen_timer-ed7cd2f393e276e6.js  zazen_timer-ed7cd2f393e276e6.js.br  zazen_timer_bg-616109dfa4b1abfe.wasm  zazen_timer_bg-616109dfa4b1abfe.wasm.br  zazen_timer_bg-d6b8f6f8f8f3da96.wasm  zazen_timer_bg-d6b8f6f8f8f3da96.wasm.br  zen_bell-42d354ce545048ce.mp3.br
src/: main.rs
