[package]
name = "zazen_timer"
version = "0.1.0"
authors = ["Augusto Leal"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "1.0.0"
dioxus = { version = "0.6.0", features = [] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-utils = "0.2.0"
log = "0.4.27"
tracing = "0.1.41"
web-sys = { version = "0.3", features = ["HtmlAudioElement"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
